<resources>
    <string name="app_name">instrumentation</string>
    <string name="app_name_text">MSuL</string>
    <string name="id">ID</string>
    <string name="password">PW</string>
    <string name="login">로그인</string>
    <string name="plz_write_login_info">아이디와 비밀번호를 입력해주세요.</string>
    <string name="no_exist_user">아이디 또는 비밀번호가 틀렸습니다. 담당자에게 문의 바랍니다.</string>

    <string name="from">From:</string>
    <string name="days">Days:</string>
    <string name="to">To:</string>

    <string name="no_data">데이터가 없습니다.</string>
    <string name="no_record">검사한 기록이 없습니다.</string>
    <string name="no_select_gauges">선택된 계측기가 없습니다. 계측기를 선택하세요.</string>
    <string name="test_no_list">test_no_list</string>
    <string name="test_list">test_list</string>
    <string name="logout">로그아웃</string>
    <string name="auto_login">자동 로그인</string>

    <string formatted="false" name="graph_name">%d [%s]</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="date_center">></string>
    <string name="start_date">시작일</string>
    <string name="end_date">종료일</string>
    <string name="select_field">현장을 선택하세요.</string>


    <string name="type_2_x">지점(m)</string>
    <string name="type_2_y">변위(mm)</string>
    <string name="type_3_y">심도(m)</string>
    <string name="type_4_x">(m)</string>

    <string name="rotate">가로보기</string>
    <string name="tree_setting">트리 설정</string>
    <string name="graph_setting">그래프 설정</string>
    <string name="init_setting">설정 초기화</string>

    <string name="tree_setting_title">관리번호</string>
    <string name="tree_setting_1">구간 :</string>
    <string name="tree_setting_2">단면 :</string>
    <string name="tree_setting_3">그룹 :</string>
    <string name="tree_setting_4">계측기 :</string>


    <string name="graph_setting_date">날짜스타일</string>
    <string name="graph_setting_point">그래프 점</string>
    <string name="graph_setting_date_1">11/10</string>
    <string name="graph_setting_date_2">22/11/10</string>
    <string name="graph_setting_point_1">원점[●]</string>
    <string name="graph_setting_point_2">빈원[○]</string>
    <string name="graph_setting_point_3">없음</string>

    <string name="user_info">사용자 정보</string>
    <string name="field_info">현장 설정 정보</string>
    <string name="using_info">사용안내</string>
    <string name="send_mail">의견 보내기</string>

    <string name="field_info_num">현장고유번호:</string>
    <string name="field_info_api_date">Api Data 기간:</string>
    <string name="field_info_lora">Lora 지원:</string>
    <string name="field_info_sms">SMS 설정:</string>
    <string name="back_setting">&lt; 설정</string>

    <string formatted="false" name="user_id">ID: %s</string>
    <string formatted="false" name="user_name">이름: %s</string>
    <string formatted="false" name="user_permission">권한: %s</string>
    <string formatted="false" name="user_number">핸드폰: %s</string>
    <string name="user_sms">SMS:</string>
    <string name="user_sms_on">SMS: ON</string>
    <string name="user_sms_off">SMS: OFF</string>

    <string name="init_setting_title">모든 설정을 초기화 하시겠습니까?</string>

    <string name="double_tab">뒤로 버튼을 한번 더 누르면 종료합니다.</string>
</resources>