<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.bellminp.instrumentation.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/basic"
        tools:ignore="SpUsage"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:text="@string/app_name_text"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintDimensionRatio="H,7:1"
            android:background="@drawable/shape_login_edit_text"
            android:layout_marginTop="50dp"
            android:hint="@string/id"
            android:textSize="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/basic"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:text="@={vm.id}"
            />

        <EditText
            android:id="@+id/edit_pw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/edit_id"
            app:layout_constraintStart_toStartOf="@id/edit_id"
            app:layout_constraintEnd_toEndOf="@id/edit_id"
            app:layout_constraintDimensionRatio="H,7:1"
            android:background="@drawable/shape_login_edit_text"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textSize="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/basic"
            android:maxLines="1"
            android:inputType="textPassword"
            android:text="@={vm.password}"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/edit_pw"
            app:layout_constraintStart_toStartOf="@id/edit_id"
            app:layout_constraintEnd_toEndOf="@id/edit_id"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintDimensionRatio="H,7:1"
            android:background="@drawable/shape_login_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="@string/login"
            android:textStyle="bold"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
