<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.bellminp.instrumentation.ui.dialog.initsetting.InitSettingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpUsage">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/shape_field_dialog"
            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="35dp"
                android:text="@string/init_setting_title"
                android:textSize="@dimen/dp_13"
                android:textColor="@color/basic"
                />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="70dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_setting_btn"
                android:text="@string/ok"
                android:textSize="@dimen/dp_13"
                android:textColor="@color/basic"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="70dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_setting_btn"
                android:text="@string/cancel"
                android:textSize="@dimen/dp_13"
                android:textColor="@color/basic"
                android:gravity="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@id/btn_ok"
                android:layout_marginTop="15dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
