<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.bellminp.instrumentation.ui.main.table.TableViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpUsage"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/layout_days"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textColor="@color/select_menu"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_from_value"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_date_select"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_from">

                    <TextView
                        android:id="@+id/tv_from_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{vm.fromDay}"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_from_value"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="0dp"
                        android:background="@color/unselect_menu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_from_value"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_from_value"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/icon_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_from_value"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@id/layout_to"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/layout_from"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    android:textColor="@color/select_menu"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_days_value"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_date_select"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_days">

                    <TextView
                        android:id="@+id/tv_days_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{vm.days}"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_days_value"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="0dp"
                        android:background="@color/unselect_menu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_days_value"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_days_value"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/icon_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_days_value"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/layout_days"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textColor="@color/select_menu"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_to_value"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_date_select"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_to">

                    <TextView
                        android:id="@+id/tv_to_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{vm.toDay}"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_to_value"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="0dp"
                        android:background="@color/unselect_menu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_to_value"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_to_value"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/icon_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_to_value"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@id/layout_days" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/black"
            >

            <TextView
                android:id="@+id/tv_sections_value"
                android:layout_width="0dp"
                android:layout_height="38dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_gauges_value"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@{vm.selectSections}"
                android:background="@drawable/shape_date_select"
                app:layout_constraintHorizontal_weight="10"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/tv_gauges_value"
                android:layout_width="0dp"
                android:layout_height="38dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_sections_value"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@{vm.selectGauges}"
                android:background="@drawable/shape_date_select"
                app:layout_constraintHorizontal_weight="14"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:maxLines="1"
                android:ellipsize="end"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/layout_date"
            app:layout_constraintBottom_toTopOf="@id/layout_bottom"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{vm.gaugesData == null ? View.GONE : View.VISIBLE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_table" />

            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="@{vm.gaugesData == null ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
